kubernetes/main/apps/dbms/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://homelab-schemas-epg.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  hostnames: ["emqx.zinn.ca"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          port: 18083
